test/errors/classes/class_base_constructor_missing_fail.hy
// EXPECT_DIAGNOSTIC: Constructor for class 'Derived' must invoke base constructor of 'Base'
class Base
{
    Base(int value) {}
}

class Derived inherits Base
{
    Derived() {}
}

// expect: Constructor for class 'Derived' must invoke base constructor of 'Base'
